[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Scenes/Dialogue/DialogueBox.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scenes/Dialogue/DialoguePlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/Textbox.png" type="Texture" id=3]
[ext_resource path="res://Assets/Scenes/Dialogue/DialogueDatabase.gd" type="Script" id=4]
[ext_resource path="res://Assets/8bitoperator.tres" type="DynamicFont" id=5]

[node name="DialogueBox" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="."]
margin_left = 1301.26
margin_top = 459.777
margin_right = 4301.26
margin_bottom = 3459.78
rect_scale = Vector2( 0.1, 0.1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="NinePatchRect" parent="."]
margin_left = 99.7388
margin_top = 739.759
margin_right = 6946.74
margin_bottom = 1857.76
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
patch_margin_left = 496
patch_margin_top = 526
patch_margin_right = 515
patch_margin_bottom = 592
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Panel"]
margin_left = 202.165
margin_top = 173.624
margin_right = 242.165
margin_bottom = 187.624
custom_fonts/font = ExtResource( 5 )
text = "Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 432.647
margin_top = -199.434
margin_right = 719.647
margin_bottom = -48.4341
custom_fonts/font = ExtResource( 5 )
text = "Text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNext" type="Button" parent="Panel"]
margin_left = 6383.68
margin_top = 208.779
margin_right = 6682.68
margin_bottom = 365.779
custom_fonts/font = ExtResource( 5 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonFinished" type="Button" parent="Panel"]
margin_left = 6374.39
margin_top = 420.2
margin_right = 6682.39
margin_bottom = 577.2
custom_fonts/font = ExtResource( 5 )
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialoguePlayer" parent="." instance=ExtResource( 2 )]

[node name="DialogueDatabase" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="pressed" from="Panel/ButtonNext" to="." method="_on_ButtonNext_pressed"]
[connection signal="pressed" from="Panel/ButtonFinished" to="." method="_on_ButtonFinished_pressed"]
[connection signal="finished" from="DialoguePlayer" to="." method="_on_DialoguePlayer_finished"]
